weatherapp_chart/templates/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: NodePort  # Specify the type as NodePort to expose the service on a port on each node
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 32300  # This is the port on which the service will be exposed on each node
      targetPort: 8000  # This is the port your app is running on inside the pod
